# Flask_app

./: .env.example  .flaskenv  .gitignore  README.md  app.py  config.py  docker-compose.yml  docker_entrypoint.sh  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py
app/controllers/: recipient.py
app/forms/: __init__.py  auth.py  upload_form.py
app/models/: __init__.py  recipient.py  user.py  users.py  utils.py
app/templates/auth/: login.html  password_reset.html  reset_password.html
app/templates/common/: header.html  messages.html
app/templates/recipient/: list.html
app/views/: __init__.py  auth.py  main.py  recipient.py  upload.py
database/: plants.json
docker/: Dockerfile
docker/mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  binlog.000009  binlog.000010  binlog.000011  binlog.000012  binlog.000013  binlog.000014  binlog.000015  binlog.000016  binlog.000017  binlog.000018  binlog.000019  binlog.000020  binlog.000021  binlog.000022  binlog.000023  binlog.000024  binlog.000025  binlog.000026  binlog.000027  binlog.000028  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
docker/python/: Dockerfile
framework/: models.py
migrations/versions/: 301699d8bb26_create_column_first_name_and_last_name_.py  632624e4616d_.py  711a3652407b_initial_migration.py  774022112368_.py  97732e4953c8_create_table_users.py  bc1ff7917165_.py  c3b34d80b54f_.py  e49081de84a6_add_unique_email.py
models/: models.py
routes/: __init__.py  clubs.py  employees.py  main.py  plants.py
static/css/: sign-up.css  style.css
templates/: add-employee.html  add_club.html  add_plant.html  base.html  employee-list.html  header.html  index.html  sign-in.html  sign-up.html
(+119 files in other folders)
